--- a/app/src/main/res/layout-land/activity_signin.xml
+++ b/app/src/main/res/layout-land/activity_signin.xml
@@ -90,7 +90,7 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/userpassLogin"
-            android:textColor="#FFF"
+            android:textColor="@color/white_hint"
             android:text="@string/signin_btnLogin"
             fontPath="fonts/Roboto-Bold.ttf"
             app:layout_constraintHorizontal_bias="0.56"
