--- a/app/src/main/res/layout-land/activity_signup.xml
+++ b/app/src/main/res/layout-land/activity_signup.xml
@@ -131,7 +131,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:textColor="#FFF"
+            android:textColor="@color/white_hint"
             android:text="@string/signup_btnSignup"
             fontPath="fonts/Roboto-Bold.ttf"
             tools:ignore="MissingPrefix"
