--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -32,7 +32,7 @@
             android:layout_width="159dp"
             android:layout_height="40dp"
             android:drawableStart="@drawable/ic_person_black_24dp"
-            android:textSize="14sp"
+            android:textSize="@dimen/text_size"
             android:textColor="@color/white_hint"
             android:textColorHint="@color/white_hint"
             android:backgroundTint="@color/white_hint"
@@ -49,7 +49,7 @@
             android:layout_width="147dp"
             android:layout_height="40dp"
             android:drawableStart="@drawable/ic_people_black_24dp"
-            android:textSize="14sp"
+            android:textSize="@dimen/text_size"
             android:textColor="@color/white_hint"
             android:textColorHint="@color/white_hint"
             android:backgroundTint="@color/white_hint"
