--- a/app/src/main/res/layout-land/activity_signin.xml
+++ b/app/src/main/res/layout-land/activity_signin.xml
@@ -13,7 +13,8 @@
     tools:context="com.gabrielmadeira.seupedido.Signin">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/constraint_layout">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
