--- a/app/src/main/res/layout-land/activity_signup.xml
+++ b/app/src/main/res/layout-land/activity_signup.xml
@@ -41,12 +41,13 @@
             android:hint="@string/name"
             android:drawablePadding="9dp"
             fontPath="fonts/Roboto-Regular.ttf"
-            tools:ignore="MissingPrefix"
+            tools:ignore="EXITMissingPrefix,MissingPrefix"
             android:id="@+id/signup_userName"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/viewLogo" />
+            app:layout_constraintTop_toBottomOf="@+id/viewLogo"
+            android:inputType="textEmailAddress"/>
         <EditText
             android:layout_width="163dp"
             android:layout_height="40dp"
@@ -63,7 +64,8 @@
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toRightOf="@+id/signup_userName"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/viewLogo" />
+            app:layout_constraintTop_toBottomOf="@+id/viewLogo"
+            android:inputType="textEmailAddress"/>
         <EditText
             android:layout_width="204dp"
             android:layout_height="40dp"
