--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -38,13 +38,15 @@
             android:backgroundTint="@color/white_hint"
             android:hint="@string/name"
             android:drawablePadding="9dp"
+            android:inputType="textEmailAddress"
             fontPath="fonts/Roboto-Regular.ttf"
             tools:ignore="MissingPrefix"
             android:id="@+id/signup_userName"
             android:layout_marginTop="48dp"
             app:layout_constraintTop_toBottomOf="@+id/viewLogo"
             android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:nextFocusForward="@+id/signup_userSurname"/>
         <EditText
             android:layout_width="147dp"
             android:layout_height="40dp"
@@ -54,6 +56,7 @@
             android:textColorHint="@color/white_hint"
             android:backgroundTint="@color/white_hint"
             android:hint="@string/surname"
+            android:inputType="textEmailAddress"
             android:drawablePadding="10dp"
             fontPath="fonts/Roboto-Regular.ttf"
             tools:ignore="MissingPrefix"
